all-data-missing-counties

--- a/requestfile.ipynb
+++ b/requestfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,265 +13,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "years = [\n",
-    "    \"january-2012\", \"february-2012\", \"march-2012\", \"april-2012\",\n",
-    "    \"may-2012\", \"june-2012\", \"july-2012\", \"august-2012\",\n",
-    "    \"september-2012\", \"october-2012\", \"november-2012\", \"december-2012\"\n",
+    "# list of the months\n",
+    "months=[ \"january\", \"february\", \"march\", \"april\",\n",
+    "    \"may\", \"june\", \"july\", \"august\",\n",
+    "    \"september\", \"october\", \"november\", \"december\"\n",
     "]\n",
     "\n",
+    "# list of the remaining counties\n",
+    "counties = ['kisii','kisumu','kitui','kwale','laikipia', 'lamu','machakos',\n",
+    "            'makueni','mandera','marsabit', 'meru','migori','mombasa','murang-a','nairobi-city','nakuru'] \n",
     "\n",
+    "# base url\n",
     "base_url = \"https://weatherandclimate.com\"\n",
     "\n",
-    "pages = []\n",
-    "next_years = []\n",
+    "# intialize list of all years\n",
+    "all_years=[]\n",
     "\n",
-    "# Generate URLs for each month in the current year\n",
-    "for year in years:\n",
-    "    url = f\"{base_url}/{year}\"\n",
-    "    pages.append(url)\n",
+    "# iterate upto year 2020\n",
+    "current_year=2010\n",
+    "for i in range(10):\n",
+    "    current_year+=1\n",
+    "    all_years.append(current_year)\n",
     "\n",
-    "    # Extract the year from the month string\n",
-    "    current_year = int(year.split('-')[1])\n",
-    "    next_year = current_year + 1\n",
-    "\n",
-    "    # Generate URLs for the same months in the next year\n",
-    "    next_year_url = f\"{base_url}/{year.split('-')[0]}-{next_year}\"\n",
-    "    next_years.append(next_year_url)\n",
-    "\n",
-    "\n"
+    "# intialize and iterate through the counties,years and months\n",
+    "# create a list of all the urls\n",
+    "all_url=[]\n",
+    "for county in counties:\n",
+    "    for month in months:\n",
+    "        for year in all_years:\n",
+    "            url = f\"{base_url}/{county}/{month}{-year}\"\n",
+    "            all_url.append(url)\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_data=pd.DataFrame()\n",
     "all_headers=[]\n",
     "\n",
-    "counties = ['kisii','kisumu','kitui','kwale','laikipia', 'lamu','machakos',\n",
-    "            'makueni','mandera','marsabit', 'meru','migori','mombasa','murang-a','nairobi-city','nakuru'] \n",
-    "all_pages=[]\n",
     "\n",
-    "for county in counties:\n",
-    "    pages = [f\"{base_url}/{county}/{year}\" for year in years]\n",
-    "    all_pages.append(pages)\n",
     "\n",
-    "for page in all_pages:\n",
-    "    for j in page:\n",
-    "        response=requests.get(j)\n",
-    "        data=response.text\n",
-    "        soup = BeautifulSoup(data, \"html.parser\")\n",
+    "for url in all_url:\n",
+    "    response=requests.get(url)\n",
+    "    data=response.text\n",
+    "    soup=BeautifulSoup(data, \"html.parser\")\n",
+    "    table=soup.find('table',class_='tb8')\n",
     "\n",
-    "        table=soup.find('table',class_='tb8')\n",
+    "    # Extract headers \n",
+    "    headers=table.find('tr')\n",
+    "    header=[hd.get_text(strip=True) for hd in headers.find_all('th')]\n",
+    "    all_headers.append(header)\n",
     "\n",
-    "    #extract headers\n",
-    "        headers=table.find('tr')\n",
-    "        header=[j.get_text(strip=True) for j in headers.find_all('th')]\n",
-    "        all_headers.append(header)\n",
     "\n",
-    "        #extract rows\n",
-    "        for row in table.find_all('tr')[1:]:\n",
-    "            rows=[k.get_text(strip=True) for k in row.find_all('td')]\n",
-    "            temperature_data = {\n",
-    "                'Max Temperature': None,\n",
-    "                'Avg Temperature': None,\n",
-    "                'Min Temperature': None,\n",
-    "                'Dew Point': None,\n",
-    "                'Precipitation': None,\n",
-    "                'Wind': None,\n",
-    "                'Sea Level Pressure': None\n",
-    "            }\n",
-    "            if len(rows) > 1:  # Ensure there are enough cells in the row\n",
-    "                    label = rows[0]\n",
-    "                    value = rows[1]\n",
-    "                    if 'Max Temperature' in label:\n",
-    "                        temperature_data['Max Temperature'] = value\n",
-    "                    elif 'Avg Temperature' in label:\n",
-    "                        temperature_data['Avg Temperature'] = value\n",
-    "                    elif 'Min Temperature' in label:\n",
-    "                        temperature_data['Min Temperature'] = value\n",
-    "                    elif 'Dew Point' in label:\n",
-    "                        temperature_data['Dew Point'] = value\n",
-    "                    elif 'Precipitation' in label:\n",
-    "                        temperature_data['Precipitation'] = value\n",
-    "                    elif 'Wind' in label:\n",
-    "                        temperature_data['Wind'] = value\n",
-    "                    elif 'Sea Level Pressure' in label:\n",
-    "                        temperature_data['Sea Level Pressure'] = value\n",
+    "    temperature_data = {'Max Temperature': None,\n",
+    "            'Avg Temperature': None,\n",
+    "            'Min Temperature': None,\n",
+    "            'Dew Point': None,\n",
+    "            'Precipitation': None,\n",
+    "            'Wind': None,\n",
+    "            'Sea Level Pressure': None\n",
+    "        }\n",
+    "    \n",
+    "    # Extract rows\n",
+    "    for row in table.find_all('tr')[1:]:\n",
+    "        rows = [rw.get_text(strip=True) for rw in row.find_all('td')]\n",
+    "        if len(rows) > 1:  # Ensure there are enough cells in the row\n",
+    "            label = rows[0]\n",
+    "            value = rows[1]\n",
+    "            if 'Max Temperature' in label:\n",
+    "                temperature_data['Max Temperature'] = value\n",
+    "            elif 'Avg Temperature' in label:\n",
+    "                temperature_data['Avg Temperature'] = value\n",
+    "            elif 'Min Temperature' in label:\n",
+    "                temperature_data['Min Temperature'] = value\n",
+    "            elif 'Dew Point' in label:\n",
+    "                temperature_data['Dew Point'] = value\n",
+    "            elif 'Precipitation' in label:\n",
+    "                temperature_data['Precipitation'] = value\n",
+    "            elif 'Wind' in label:\n",
+    "                temperature_data['Wind'] = value\n",
+    "            elif 'Sea Level Pressure' in label:\n",
+    "                temperature_data['Sea Level Pressure'] = value\n",
     "\n",
-    "            # Append the extracted data to the DataFrame\n",
-    "            df = pd.DataFrame({\n",
-    "                'County': [county],\n",
-    "                'Month': [year.strip('-')[0:5]],  # Assuming 'year' is equivalent to 'Month'\n",
-    "                'Year': [year],\n",
-    "                'Max Temperature': [temperature_data.get('Max Temperature')],\n",
-    "                'Avg Temperature': [temperature_data.get('Avg Temperature')],\n",
-    "                'Min Temperature': [temperature_data.get('Min Temperature')],\n",
-    "                'Dew Point': [temperature_data.get('Dew Point')],\n",
-    "                'Precipitation': [temperature_data.get('Precipitation')],\n",
-    "                'Wind': [temperature_data.get('Wind')],\n",
-    "                'Sea Level Pressure': [temperature_data.get('Sea Level Pressure')]\n",
-    "            })\n",
-    "                \n",
-    "            all_data = pd.concat([all_data, df], ignore_index=True)\n",
+    "        # Append the extracted data to the DataFrame\n",
+    "        df = pd.DataFrame({\n",
+    "            'County': [county],\n",
+    "            'Month': [month.capitalize()],\n",
+    "            'Year': [year],\n",
+    "            'Max Temperature': [temperature_data.get('Max Temperature')],\n",
+    "            'Avg Temperature': [temperature_data.get('Avg Temperature')],\n",
+    "            'Min Temperature': [temperature_data.get('Min Temperature')],\n",
+    "            'Dew Point': [temperature_data.get('Dew Point')],\n",
+    "            'Precipitation': [temperature_data.get('Precipitation')],\n",
+    "            'Wind': [temperature_data.get('Wind')],\n",
+    "            'Sea Level Pressure': [temperature_data.get('Sea Level Pressure')]\n",
+    "        })\n",
     "\n",
-    "\n"
+    "        all_data = pd.concat([all_data, df], ignore_index=True)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>County</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Max Temperature</th>\n",
-       "      <th>Avg Temperature</th>\n",
-       "      <th>Min Temperature</th>\n",
-       "      <th>Dew Point</th>\n",
-       "      <th>Precipitation</th>\n",
-       "      <th>Wind</th>\n",
-       "      <th>Sea Level Pressure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2185</th>\n",
-       "      <td>nakuru</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>None</td>\n",
-       "      <td>23.0°C (73.4°F)</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>557</th>\n",
-       "      <td>nakuru</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2445</th>\n",
-       "      <td>nakuru</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>None</td>\n",
-       "      <td>21.0°C (69.8°F)</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2424</th>\n",
-       "      <td>nakuru</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>14.6mm | 0.57in</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1935</th>\n",
-       "      <td>nakuru</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      County Month  Year Max Temperature  Avg Temperature Min Temperature  \\\n",
-       "2185  nakuru  2012  2012            None  23.0°C (73.4°F)            None   \n",
-       "557   nakuru  2012  2012            None             None            None   \n",
-       "2445  nakuru  2012  2012            None  21.0°C (69.8°F)            None   \n",
-       "2424  nakuru  2012  2012            None             None            None   \n",
-       "1935  nakuru  2012  2012            None             None            None   \n",
-       "\n",
-       "     Dew Point    Precipitation  Wind Sea Level Pressure  \n",
-       "2185      None             None  None               None  \n",
-       "557       None             None  None               None  \n",
-       "2445      None             None  None               None  \n",
-       "2424      None  14.6mm | 0.57in  None               None  \n",
-       "1935      None             None  None               None  "
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 24960 entries, 0 to 24959\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   County              24960 non-null  object\n",
+      " 1   Month               24960 non-null  object\n",
+      " 2   Year                24960 non-null  int64 \n",
+      " 3   Max Temperature     24960 non-null  object\n",
+      " 4   Avg Temperature     23040 non-null  object\n",
+      " 5   Min Temperature     21120 non-null  object\n",
+      " 6   Dew Point           17280 non-null  object\n",
+      " 7   Precipitation       13440 non-null  object\n",
+      " 8   Wind                7680 non-null   object\n",
+      " 9   Sea Level Pressure  1920 non-null   object\n",
+      "dtypes: int64(1), object(9)\n",
+      "memory usage: 1.9+ MB\n"
+     ]
     }
    ],
    "source": [
-    "all_data.sample(5)"
+    "all_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_data.to_csv(\"climate_data\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
