--- a/working.ipynb
+++ b/working.ipynb
@@ -34,6 +34,9 @@
     "          'july', 'august', 'september', 'october', 'november', 'december']\n",
     "\n",
     "# List of years from 2010 to 2011\n",
+    "# Loop through 2010 to 2011,save.\n",
+    "# Loop through 2012 to 2020 , save.\n",
+    "# Merge the two dataframes\n",
     "years = list(range(2012, 2020))\n",
     "\n",
     "# Initialize an empty DataFrame to store all data\n",
